--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <script src="jquery-1.10.2.min.js"></script>
     <script src="chartBuilder.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="materialize.min.js"></script>
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  -->
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
@@ -14,15 +15,38 @@
 <body>
     <div class="container">
         <h1 class="title">Think twice 0_0</h1>
+        <div class="progress">
+            <div class="indeterminate"></div>
+        </div>
         <div class="row">
-            <div class="col s6">
-                <p class="flow-text analysedText"></p>
+            <div class="col s12">
+                <ul class="collapsible" data-collapsible="accordion">
+                    <li>
+                        <div class="collapsible-header">Sentences</div>
+                        <div class="collapsible-body">
+                            <div class="sentenceAnalysis">
+                                <ul class="tabs">
+                                    <li class="tab col s4"><a href="#emotionalTab">Emotional tones</a></li>
+                                    <li class="tab col s4"><a class="active" href="#languageTab">Language tones</a></li>
+                                    <li class="tab col s4"><a href="#socialTab">Social tones</a></li>
+                                </ul>
+                                <div id="emotionalTab" class="col s12"></div>
+                                <div id="languageTab" class="col s12"></div>
+                                <div id="socialTab" class="col s12"></div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header">Analysed text</div>
+                        <div class="collapsible-body"><p class="flow-text analysedText"></p></div>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="row z-depth-1">
             <div class="col s4">
                 <h4>Emotional tones</h4>
-                <ul class="collapsible" data-collapsible="accordion">
+                <ul class="collapsible z-depth-0" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header"><i class="em em-angry"></i>anger</div>
                         <div class="collapsible-body"><p class="flow-text">Evoked due to injustice, conflict, humiliation, negligence or betrayal. If anger is active, the individual attacks the target, verbally or physically. If anger is passive, the person silently sulks and feels tension and hostility.</p></div>
@@ -52,7 +76,7 @@
         <div class="row z-depth-1">
             <div class="col s4">
                 <h4>Language tones</h4>
-                <ul class="collapsible" data-collapsible="accordion">
+                <ul class="collapsible z-depth-0" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header"><i class="em em-neckbeard"></i>Analytic</div>
                         <div class="collapsible-body"><p class="flow-text">A person's reasoning and analytical attitude about things</p></div>
@@ -67,14 +91,14 @@
                     </li>
                 </ul>
             </div>
-            <div class="col s5 offset-s3">
+            <div class="col s5 offset-s3 center-align">
                 <canvas id="languageChart" width="400" height="300"></canvas>
             </div>
         </div>
         <div class="row z-depth-1">
             <div class="col s4">
                 <h4>Social tones</h4>
-                <ul class="collapsible" data-collapsible="accordion">
+                <ul class="collapsible z-depth-0" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header"><i class="em em-open_hands"></i>openness</div>
                         <div class="collapsible-body"><p class="flow-text">The extent a person is open to experience a variety of activities.</p></div>
